# VisionCraft

./: .gitignore  README.md  pyproject.toml  requirements.txt
plans/: 红队c2与免杀系统学习计划_6个月_windows优先_adjusted_20260612_041739.md
src/aura/: __init__.py  config.py  main.py
src/aura/agents/: __init__.py  clarification.py  clarifier.py  daily_tracker.py  plan_generator.py  resource_researcher.py  scheduler.py  skill_tree.py  tracker.py
src/aura/core/: __init__.py  input.py  llm_client.py  obsidian.py  web_search.py
src/aura/storage/: __init__.py  state_manager.py
src/aura/topology/: __init__.py  generator.py  renderer.py
src/visioncraft_aura.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
